[metadata]
name = bleemeo-agent
description = "Agent for Bleemeo"
long_description = file: README.rst
version = attr: bleemeo_agent.__version__
author = Bleemeo
author_email = hello@bleemeo.com
url = https://bleemeo.com
license = Apache 2.0
keywords = monitoring, cloud, docker, aws
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators

[options]
install_requires = 
        apscheduler
        jinja2
        psutil >= 2.0.0
        requests
        six
        pyyaml
packages = find:
include_package_data = True
scripts =
    bin/bleemeo-netstat

[options.extras_require]
docker = docker
influxdb = influxdb > 2.6.0
bleemeo = paho-mqtt
sentry = raven
web = flask
kubernetes = kubernetes

[options.entry_points]
console_scripts = 
    bleemeo-agent = bleemeo_agent.core:main
    bleemeo-agent-gather-facts = bleemeo_agent.facts:get_facts_root
